# ProgettoPCS2025

./: .gitignore  CMakeLists.txt  README.md  Scaletta_Presentazione.txt  Tetraedro0D.csv  main.cpp  main_test.cpp
SolidiPlatonici/Icosaedro/: Cell0D.csv  Cell0Ds.csv  Cell1Ds.csv  Cell2Ds.csv
SolidiPlatonici/Ottaedro/: Cell0D.csv  Cell0Ds.csv  Cell1DS.csv  Cell2Ds.csv
SolidiPlatonici/Tetraedro/: Cell0Ds.csv  Cell1Ds.csv  Cell2Ds.csv
UML/: Dual.txt  GeodeticSolidType1  GeodeticSolidType1.txt  GeodeticSolidType2.txt  ShortestPath.txt  TriangulationLibrary.txt  UML_ActivityDiagram.txt  UML_ClassDiagram.txt  UML_Dual.txt  UML_GeodeticSolidType1and2.txt  UML_SequenceDiagram.txt  UML_ShortestPath.txt  UML_SupportFunctions.txt  main.txt
UML /: OrderFaces.txt
src/: CMakeLists.txt  FileProva.hpp  Polyhedron.hpp  PolyhedronMesh.hpp  utils.cpp  utils.hpp
src_test/: CMakeLists.txt  test_poliedro.hpp
